--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	<title></title>
 
 	<!--Bootstrap references-->
@@ -13,11 +12,11 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	
-	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 
-  	<script src="//code.jquery.com/jquery-1.12.4.js"></script>
+  	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 
-  	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
@@ -59,38 +58,48 @@
 </head>
 <body>
 
-  	<div class="container-fluid">
-
-  		<!-- Header Section -->
-  		<div class="col"><h1>Crime Dashboard</h1></div>
+  	<div id="tabs">
+		<div ><h5 class="header" >Crime Dashboard</h5></div>
+		<ul class="nav nav-tabs">
+			<li class="nav-item"><a class="nav-link active" href="index.html">MAIN</a>
+			</li>
+		    <li class="nav-item"><a class="nav-link" href="stats.html">ANALYSIS</a>
+		    </li>
+		    <li class="nav-item"><a class="nav-link" href="data.html">DATA</a>
+		    </li>
+		    <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a>
+		    </li>
+		</ul>	  	
+		<div id="tabs-1" class="container-fluid">
 
 	  	<div class="row">
 			<div class="col-lg-6">
 				<!-- Dropdown input to select grouping factor -->
 				<label for="group"><b>Offence Group</b></label>
-				<select id="offence" name="offence" onchange= "getValue()" class="form-control">
+				<select id="crimeType" name="crimeType" onchange="getOffence()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
 				</select>
 			</div>
 			<div class="col-lg-3">
 				<label for="startDate"><b>Start Date</b></label>
-				<input autocomplete="off" type='text' class="form-control" id="startDate" name="startDate" onclick="datePicker()">
+				<input autocomplete="off" type='text' class="form-control" id="startDate" name="startDate" onchange="getStartDate()">
 			</div>
 
 			<div class="col-lg-3 col-lg-offset-3">
 				<label for="endDate"><b>End Date</b></label>
-				<input autocomplete="off" type='text' class="form-control" id="endDate" name="endDate" onclick="datePicker()" onchange= "getValue()">
+				<input autocomplete="off" type='text' class="form-control" id="endDate" name="endDate"  onchange= "getEndDate()">
 			</div>
 
 			<div class="col-lg-3" >
 				<label for="group"><b>Arrest</b></label>
-				<select id="arrest" onchange= "getValue()" class="form-control">
+				<select id="arrest" onchange= "getArrest()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
 				</select>
 			</div>
 			<div class="col-lg-3 col-lg-offset-3">
 				<label for="group"><b>Domestic</b></label>
-				<select id="domestic" onchange= "getValue()" class="form-control">
+				<select id="domestic" onchange= "getDomestic()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
 				</select>
 			</div>
+		</div>
 			<div class="col-lg-6 col-lg-offset-2">
 				<table class="table">
 				    <thead>
