--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 		</div>
 		</div>
 		<div class="row" style="margin-left: 15px ; margin-top: 35px">
-			<div class="col-lg-5.5" id="map" style="height: 500px; width: 690px"></div>
+			<div class="col-lg-5.5" id="map" style="height: 600px; width: 600px"></div>
 			<div class="col-lg-6 col-lg-offset-2">
 				<!-- <div id="graph1" style="height: 350px"></div> -->
-				<div class="col-lg-5.5" id="graph3" style="height: 500px; width: 690px"></div>
+				<!-- <div class="col-lg-5.5" id="graph3" style="height: 500px; width: 690px"></div> -->
 			</div>
 		</div>
   	</div>
