--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<div class="col-lg-6">
 				<!-- Dropdown input to select grouping factor -->
 				<label for="group"><b>Offence Group</b></label>
-				<select id="crimeType" name="crimeType" onchange="filterData()" class="form-control"><option value="ARSON" selected="selected"> -- All --</option>
+				<select id="crimeType" name="crimeType" onchange="filterData()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
 				</select>
 			</div>
 			<div class="col-lg-3">
@@ -96,21 +96,21 @@
 
 			<div class="col-lg-3" >
 				<label for="group"><b>Arrest</b></label>
-				<select id="arrest" onchange= "filterData()" class="form-control"><option value="true" selected="selected"> -- All --</option>
+				<select id="arrest" onchange= "filterData()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
 				</select>
 			</div>
 			<div class="col-lg-3 col-lg-offset-3">
 				<label for="group"><b>Domestic</b></label>
-				<select id="domestic" onchange= "filterData()" class="form-control"><option value="true" selected="selected"> -- All --</option>
+				<select id="domestic" onchange= "filterData()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
 				</select>
 			</div>
 		</div>
 		</div>
 		<div class="row" style="margin-left: 15px ; margin-top: 15px">
 			<div class="col-lg-5.5" id="map" style="height: 680px; width: 680px"></div>
-			<div class="col-lg-6 col-lg-offset-2">
-				<!-- <div id="graph1" style="height: 350px"></div> -->
-				<!-- <div class="col-lg-5.5" id="graph3" style="height: 500px; width: 690px"></div> -->
+			<div class="col-lg-5.5 col-lg-offset-2">
+				<div id="graph1" style="height: 440px; width:690px"></div>
+				<div class="col-lg-5.5" id="graph3" style="height: 500px; width: 690px"></div>
 			</div>
 		</div>
   	</div>
