--- a/index.html
+++ b/index.html
@@ -1,127 +1,153 @@
+
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<!--Bootstrap references-->
-	<meta charset="utf-8">
+    <title>Crime Dashboards</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="./css/styles.css">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-	
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 
-  	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-  	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-	<!-- Underscore and backbone JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-	<!-- Date Range PickerJS -->
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-	
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <!--Plotly reference-->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-	<!-- D3.JS -->
-	<script src="//d3js.org/d3.v5.min.js"></script>
-	<script src="//d3js.org/d3-tile.v0.0.min.js"></script>
-	<script src="//d3js.org/topojson.v1.min.js"></script>
-	<script src="//d3js.org/queue.v1.min.js"></script>
+    <!--Leaflet CSS file references-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin=""/>
 
-	<!--Plotly reference-->
-	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
+    integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
+    crossorigin=""></script>
 
-	<!--Leaflet CSS file references-->
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-   	crossorigin=""/>
+    <!--the following CSS is used to set the size of the Map-->
+    <style type="text/css">#map{height: 180px; }</style>
 
-   	<!-- Make sure you put this AFTER Leaflet's CSS -->
- 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
-   	integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
-   	crossorigin=""></script>
-
-	<!--the following CSS is used to set the size of the Map-->
-	<style type="text/css">#map{height: 180px; }</style>
-
-	<!--the following links incorporate the CSS required for custom icon creation -->
-	<link rel="stylesheet" href="./css/ionicons.min.css">
-	<link rel="stylesheet" href="./css/leaflet.awesome-markers.css">
-	<script src="./js/leaflet.awesome-markers.js"></script>
-
+    <!--the following links incorporate the CSS required for custom icon creation -->
+    <link rel="stylesheet" href="./css/ionicons.min.css">
+    <link rel="stylesheet" href="./css/leaflet.awesome-markers.css">
+    <script src="./js/leaflet.awesome-markers.js"></script>
 </head>
+
 <body>
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>Crime Dashboard</h3>
+            </div>
 
-  	<div id="tabs" class="container-fluid">
-		<div ><h5 class="header" >Crime Dashboard</h5></div>
-		<ul class="nav nav-tabs">
-			<li class="nav-item"><a class="nav-link active py-0" href="index.html">MAIN</a>
-			</li>
-		    <li class="nav-item"><a class="nav-link py-0" href="stats.html">ANALYSIS</a>
-		    </li>
-		    <li class="nav-item"><a class="nav-link py-0" href="data.html">DATA</a>
-		    </li>
-		    <li class="nav-item"><a class="nav-link py-0" href="about.html">ABOUT</a>
-		    </li>
-		</ul>	  	
-		<div id="tabs-1" class="container-fluid">
+            <ul class="list-unstyled components">
+                <label for="group"><b>Offence Group</b></label>
+                <select id="crimeType" name="crimeType" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>
+                <label for="startDate"><b>Start Date</b></label>
+                <input autocomplete="off" type='text' class="form-control" id="startDate" name="startDate" value="2012-01-08">
+                <label for="endDate"><b>End Date</b></label>
+                <input autocomplete="off" type='text' class="form-control" id="endDate" name="endDate" value="2019-07-08">
+                <label for="group"><b>Arrest</b></label>
+                <select id="arrest" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>
+                <label for="group"><b>Domestic</b></label>
+                <select id="domestic" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>            
+            </ul>
+        </nav>
 
-	  	<div class="row">
-			<div class="col-lg-6">
-				<!-- Dropdown input to select grouping factor -->
-				<label for="group"><b>Offence Group</b></label>
-				<select id="crimeType" name="crimeType" onchange="filterData()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
-				</select>
-			</div>
-			<div class="col-lg-3">
-				<label for="startDate"><b>Start Date</b></label>
-				<input autocomplete="off" type='text' class="form-control" id="startDate" name="startDate" onchange="filterData()" value="2010-07-08">
-			</div>
+        <!-- Page Content  -->
+        <div id="content">
 
-			<div class="col-lg-3 col-lg-offset-3">
-				<label for="endDate"><b>End Date</b></label>
-				<input autocomplete="off" type='text' class="form-control" id="endDate" name="endDate"  onchange= "filterData()" value="2019-07-08">
-			</div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
 
-			<div class="col-lg-3" >
-				<label for="group"><b>Arrest</b></label>
-				<select id="arrest" onchange= "filterData()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
-				</select>
-			</div>
-			<div class="col-lg-3 col-lg-offset-3">
-				<label for="group"><b>Domestic</b></label>
-				<select id="domestic" onchange= "filterData()" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
-				</select>
-			</div>
-		</div>
-		</div>
-		<div class="row" style="margin-left: 15px ; margin-top: 15px">
-			<div class="col-lg-5.5" id="map" style="height: 680px; width: 680px"></div>
-			<div class="col-lg-5.5 col-lg-offset-2">
-				<div id="graph1" style=" height: 680px; width:680px"></div>
-				<div class="col-lg-5.5" id="graph2" style="height: 340px; width: 680px"></div>
-			</div>
-		</div>
-  	</div>
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Toggle Sidebar</span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
 
-	<!--reference JS scripts -->
-	<!-- <script src="js/graph.js"></script> -->
- 	<script src="js/leaflet.awesome-markers.js"></script>
- 	<script src="js/leaflet.js"></script>
- 	<script src="js/loadJSON.js"></script>
- 	<!-- <script src="js/timeFilter.js"></script> -->
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link active py-0" href="index.html">MAIN</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link py-0" href="stats.html">ANALYSIS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link py-0" href="data.html">DATA</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link py-0" href="about.html">ABOUT</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="row" style="margin-left: 30px ; margin-top: 15px">
+                <div class="col-lg-6" id="map" style="height: 600px; width: 500px"></div>
 
+                <div class="col-lg-6 col-lg-offset-2" style="height: 500px; width: 500px">
+                    
+                    <button type="button" class="btn btn-sm btn-info collapsed" data-toggle="collapse" data-target="#graph1" style=" margin-top: 10px; width: 500px">Crime Count by Type</button>
+                    <div id="graph1" class="collapse" style="height: 500px; width: 500px"></div>
 
+                    <button type="button" class="btn btn-sm btn-info collapsed" data-toggle="collapse" data-target="#graph3" style=" margin-top: 10px; width: 500px">Crime Count per Community Area</button>
+                    <div id="graph3" class="collapse" style="height: 500px; width: 500px"></div>
+
+                    <button type="button" class="btn btn-sm btn-info collapsed" data-toggle="collapse" data-target="#graph2" style="margin-top: 10px; width: 500px">Time Series</button>
+                    <div id="graph2" class="collapse" style="height: 500px; width: 500px"></div>
+
+                    <button type="button" class="btn btn-sm btn-info collapsed" data-toggle="collapse" data-target="#graph4" style="margin-top: 10px; width: 500px">Histogram</button>
+                    <div id="graph4" class="collapse" style="height: 500px; width: 500px"></div>
+
+                    <button type="button" class="btn btn-sm btn-info collapsed" data-toggle="collapse" data-target="#graph3" style="margin-top: 10px; width: 500px">Boxplot</button>
+                    <div id="graph5" class="collapse" style="height: 500px; width: 500px"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/leaflet.awesome-markers.js"></script>
+    <script src="js/leaflet.js"></script>
+    <script src="js/leaflet-heat.js"></script>
+    <script src="js/heatmap.js"></script>
+    <script src="js/fillDropdowns.js"></script>
+    <script src="js/choroplethMap.js"></script>
+    <script src="js/graphs.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+            });
+        });
+    </script>
 </body>
+
 </html>
