--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
 
@@ -31,21 +32,20 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-
     <!--Plotly reference-->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!--Leaflet CSS file references-->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin=""/>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
 
     <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
-    integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
-    crossorigin=""></script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
 
-    <!--the following CSS is used to set the size of the Map-->
-    <style type="text/css">#map{height: 180px; }</style>
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
+
+	<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
+
+    <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js"></script>
 
     <!--the following links incorporate the CSS required for custom icon creation -->
     <link rel="stylesheet" href="./css/ionicons.min.css">
@@ -111,9 +111,16 @@
                 </div>
             </nav>
             <div class="row" style="margin-left: 30px ; margin-top: 15px">
-                <div class="col-lg-6" id="map" style="height: 600px; width: 500px"></div>
+            	<div cass="col-lg-6">
+			        <div id="map" ></div>
+			        <div id="button-wrapper">
+			            <button id="Btn1" class="button">Show/Hide Choropleth Map</button>
+			            <button id="Btn2" class="button">Show/Hide Heatmap Map</button>
+			            <button id="Btn3" class="button">Show/Hide Cluster Map</button>
+			        </div> 
+				</div>
 
-                <div class="col-lg-6 col-lg-offset-2" style="height: 500px; width: 500px">
+                <div class="col-lg-6 col-lg-offset-2" >
                     
                     <button type="button" class="btn btn-sm btn-info collapsed" data-toggle="collapse" data-target="#graph1" style=" margin-top: 10px; width: 500px">Crime Count by Type</button>
                     <div id="graph1" class="collapse" style="height: 500px; width: 500px"></div>
@@ -137,9 +144,10 @@
     <script src="js/leaflet.awesome-markers.js"></script>
     <script src="js/leaflet.js"></script>
     <script src="js/leaflet-heat.js"></script>
-    <script src="js/heatmap.js"></script>
     <script src="js/fillDropdowns.js"></script>
-    <script src="js/choroplethMap.js"></script>
+    <script src="js/heatmapLayer.js"></script>
+    <script src="js/clusterLayer.js"></script>
+    <script src="js/choroplethLayer.js"></script>
     <script src="js/graphs.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
