Choropleth display fixed

--- a/about.html
+++ b/about.html
@@ -1,42 +1,143 @@
+
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<title></title>
+    <title>Crime Dashboards</title>
 
-	<!--Bootstrap references-->
-	<meta charset="utf-8">
+    <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="./css/styles.css">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
+    <!--the following links incorporate the CSS required for custom icon creation -->
+    <link rel="stylesheet" href="./css/ionicons.min.css">
+    <link rel="stylesheet" href="./css/leaflet.awesome-markers.css">
+    <script src="./js/leaflet.awesome-markers.js"></script>
 </head>
-<body>
-	<div id="tabs" class="container-fluid">
-		<div ><h5 class="header" >Crime Dashboard</h5></div>
-		<ul class="nav nav-tabs">
-			<li class="nav-item"><a class="nav-link" href="index.html">MAIN</a>
-			</li>
-		    <li class="nav-item"><a class="nav-link" href="stats.html">ANALYSIS</a>
-		    </li>
-		    <li class="nav-item"><a class="nav-link" href="data.html">DATA</a>
-		    </li>
-		    <li class="nav-item"><a class="nav-link active" href="about.html">ABOUT</a>
-		    </li>
-		</ul>
-	  	<div id="tabs-4" class="container-fluid">
-	  		<div><h1>User Description</h1> </div>
-	  	</div>
-	</div>
-	<!--reference JS scripts -->
 
+<body>
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>Crime Dashboard</h3>
+            </div>
+
+            <ul class="list-unstyled components">
+                <label for="group"><b>Offence Group</b></label>
+                <select id="crimeType" name="crimeType" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>
+                <label for="startDate"><b>Start Date</b></label>
+                <input autocomplete="off" type='text' class="form-control" id="startDate" name="startDate" value="2012-01-08">
+                <label for="endDate"><b>End Date</b></label>
+                <input autocomplete="off" type='text' class="form-control" id="endDate" name="endDate" value="2019-07-08">
+                <label for="group"><b>Arrest</b></label>
+                <select id="arrest" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>
+                <label for="group"><b>Domestic</b></label>
+                <select id="domestic" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>            
+            </ul>
+        </nav>
+
+        <!-- Page Content  -->
+        <div id="content">
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Toggle Sidebar</span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link py-0" href="index.html">MAIN</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link py-0" href="data.html">DATA</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link active py-0" href="about.html">ABOUT</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="row" style="margin-left: 5px">
+                <div class="col-sm-5 col-md-5 col-lg-5">
+                    <div class="bg" style="margin-left: 40px">
+                        <input id="Cbox1" type="checkbox" >
+                        <label for="Cbox1">Choropleth Map</label>
+                        <input id="Cbox2" type="checkbox" style="margin-left: 5px">
+                        <label for="Cbox2">Heatmap Map</label>
+                        <input id="Cbox3" type="checkbox" style="margin-left: 5px">
+                        <label for="Cbox3">Cluster Map</label>
+                    </div>
+                    <div id="map" ></div>
+                </div>
+                <div class="col-sm-7 col-md-7 col-lg-7">
+                    <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph1">Crime Count by Type</button>
+                    <div id="graph1" class="collapse graph"></div>
+
+                    <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph2" style="margin-top: 10px">Time Series</button>
+                    <div id="graph2" class="collapse graph"></div>
+
+                    <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph3" style=" margin-top: 10px">Crime Count per Community Area</button>
+                    <div id="graph3" class="collapse graph"></div>
+
+                    <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph4" style="margin-top: 10px">Histogram</button>
+                    <div id="graph4" class="collapse graph"></div>
+
+                    <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph5" style="margin-top: 10px">Boxplot</button>
+                    <div id="graph5" class="collapse graph"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/leaflet.awesome-markers.js"></script>
+    <script src="js/leaflet.js"></script>
+    <script src="js/leaflet-heat.js"></script>
+    <script src="js/fillDropdowns.js"></script>
+    <script src="js/choroplethLayer.js"></script>
+    <script src="js/graphs.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+            });
+        });
+    </script>
 </body>
+
 </html>
