--- a/data.html
+++ b/data.html
@@ -1,81 +1,134 @@
+
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<title></title>
+    <title>Crime Dashboards</title>
 
-	<!--Bootstrap references-->
-	<meta charset="utf-8">
+    <!-- Our Custom CSS -->
+    <link rel="stylesheet" href="./css/styles.css">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-	
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 
-  	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-  	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-	<!-- Underscore and backbone JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-	<!-- Date Range PickerJS -->
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-	
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-
+    <!--the following links incorporate the CSS required for custom icon creation -->
+    <link rel="stylesheet" href="./css/ionicons.min.css">
+    <link rel="stylesheet" href="./css/leaflet.awesome-markers.css">
+    <script src="./js/leaflet.awesome-markers.js"></script>
 </head>
+
 <body>
-	<div id="tabs" class="container-fluid">
-		<div ><h5 class="header" >Crime Dashboard</h5></div>
-		<ul class="nav nav-tabs">
-			<li class="nav-item"><a class="nav-link" href="index.html">MAIN</a>
-			</li>
-		    <li class="nav-item"><a class="nav-link" href="stats.html">ANALYSIS</a>
-		    </li>
-		    <li class="nav-item"><a class="nav-link active" href="data.html">DATA</a>
-		    </li>
-		    <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a>
-		    </li>
-		</ul>
-	  	<div id="tabs-3" class="container-fluid">
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>Crime Dashboard</h3>
+            </div>
 
-		  	<div class="row">
-		  		<table class="table">
-				    <thead>
-						<tr>
-							<th></th>
-							<th class="text-right">Crime Rate (per 1000 pop)</th>
-							<th class="text-right">Crime Count</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td><b>Total</b></td>
-							<td class="text-right">1000</td>
-							<td class="text-right">10000</td>
-						</tr>
-				    </tbody>
-				</table>
+            <ul class="list-unstyled components">
+                <label for="group"><b>Offence Group</b></label>
+                <select id="crimeType" name="crimeType" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>
+                <label for="startDate"><b>Start Date</b></label>
+                <input autocomplete="off" type='text' class="form-control" id="startDate" name="startDate" value="2012-01-08">
+                <label for="endDate"><b>End Date</b></label>
+                <input autocomplete="off" type='text' class="form-control" id="endDate" name="endDate" value="2019-07-08">
+                <label for="group"><b>Arrest</b></label>
+                <select id="arrest" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>
+                <label for="group"><b>Domestic</b></label>
+                <select id="domestic" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
+                </select>            
+            </ul>
+        </nav>
 
-			</div>
+        <!-- Page Content  -->
+        <div id="content">
 
-	  	</div>
-	</div>
-	<!--reference JS scripts -->
- 	<!-- <script src="js/loadJSON.js"></script> -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Toggle Sidebar</span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link py-0" href="index.html">MAIN</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link active py-0" href="data.html">DATA</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link py-0" href="about.html">ABOUT</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="row" style="margin-left: 5px">
+                <table class="table">
+                <thead>
+                  <tr>
+                    <th>Crime Type</th>
+                    <th>Min</th>
+                    <th>Q1</th>
+                    <th>Mean Type</th>
+                    <th>Q3</th>
+                    <th>Max</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>.com</td>
+                    <td>Doe</td>
+                    <td>.com</td>
+                    <td>Doe</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/leaflet.awesome-markers.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+            });
+        });
+    </script>
 </body>
-</html>
 
-<!-- https://www.youtube.com/watch?v=AOfSuajwY-I -->
+</html>
